# simple-ensi-openapi-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt  seog.sh
app/: generate_entity.py  generate_paths.py  translate_entity_to_en.py
docs/: tips.md
examples/: example-entity.yaml  example-paths.yaml
seog/: cli.py
